--- a/react/package.json
+++ b/react/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client --port 8087",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
     "web": "expo start --web",
     "totaal": "npm run free-port && concurrently \"pip install -r ../requirements.txt\" \"py ../manage.py runserver 8000\" \"npm install\" \"npm start\"",
-    "free-port": "powershell -Command \"Get-NetTCPConnection -LocalPort 8087 -ErrorAction SilentlyContinue | Select-Object -ExpandProperty OwningProcess | ForEach-Object { Stop-Process -Id $_ -Force }\" || echo Port 8087 is free"
+    "free-port": "powershell -Command \"Get-NetTCPConnection -LocalPort 8087 -ErrorAction SilentlyContinue | Select-Object -ExpandProperty OwningProcess | ForEach-Object { Stop-Process -Id $_ -Force }\" || echo Port 8087 is free",
+    "snyk-test-fix": "snyk test --all-projects && snyk fix"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
@@ -35,7 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "concurrently": "^8.2.2"
+    "snyk": "^1.0.0"
   },
   "private": true
 }
